--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "elagant-music-app",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://github.com/Color-Kat/Color-music",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d public"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
@@ -28,6 +30,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.3",
     "typescript": "^5.0.2",
